--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js"
+     "dev": "nodemon index.js",
+      "build": "echo 'Build process initiated' && npm install"
+    
   },
   "keywords": [],
   "author": "",
