--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,7 @@
       }
     ],
     "routes": [
-      { "src": "/register", "dest": "/index.js" },
+      { "src": "/profile", "dest": "/index.js" },
       { "src": "/login", "dest": "/index.js" }
     ]
   }
